--- a/Profiles Page/profiles/package.json
+++ b/Profiles Page/profiles/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
