--- a/Profiles Page/profiles/package.json
+++ b/Profiles Page/profiles/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
+    "mongoose-gridfs": "^1.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
