--- a/Profiles Page/profiles/package.json
+++ b/Profiles Page/profiles/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.2",
     "mongoose-gridfs": "^1.3.0",
+    "multer-gridfs-storage": "^5.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
