--- a/Profiles Page/profiles/package.json
+++ b/Profiles Page/profiles/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^7.2.2",
     "mongoose-gridfs": "^1.3.0",
     "multer-gridfs-storage": "^5.0.2",
