--- a/Profiles Page/profiles/package.json
+++ b/Profiles Page/profiles/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "mongoose-gridfs": "^1.3.0",
     "multer-gridfs-storage": "^5.0.2",
