--- a/Profiles Page/profiles/package.json
+++ b/Profiles Page/profiles/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.3.0",
+    "bson-objectid": "^2.0.4",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
