--- a/Profiles Page/profiles/package.json
+++ b/Profiles Page/profiles/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "aws-sdk": "^2.1399.0",
     "bootstrap": "^5.3.0",
     "bson-objectid": "^2.0.4",
     "dotenv": "^16.1.4",
